[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
blake2 = { version = "0.9.0", default-features = false }
casper-types = "1.4.6"
odra = { version = "0.1.0", default-features = false, features = [ "wasm" ] }
odra-casper-shared = "0.1.0"